--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,216 @@
-/* CSS stillerinizi buraya girin */
+html {
+  margin-top:0;
+  padding-top:0;
+  width: 100%;
+  height: 100%
+}
+
+body {
+  margin-top:0;
+  padding-top:0;
+  font-family: font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Syne Mono', monospace;
+}
+
+.all-content {
+  padding: 0;
+}
+
+.header-section {
+  width: 100%;
+  height: 120px;
+  padding-top: 10px;
+  background-color: rgb(0, 0, 0);
+  margin-top: 0px;
+  position: sticky;
+  top: 0;
+}
+
+.my-name h1 {
+  margin-left: 15px;
+  color: rgb(173, 173, 174);
+  font-family:sans-serif;
+}
+
+.my-name h1:hover {
+  color: rgb(0, 60, 255);
+}
+
+.top-menu-nav {
+  display: flex;
+  margin-left: 15px;
+}
+
+.top-menu-nav nav a {
+  background-color: white;
+  color: black;
+  border: 0.05rem solid rgb(0, 60, 255);
+  padding: 0.3rem 1rem;
+  text-decoration: none;
+  margin: 0.5rem;
+}
+
+.top-menu-nav nav :hover {
+  background-color: rgb(0, 60, 255);
+  color: white;
+}
+
+.all-main-section {
+  width: 100%;
+  
+}
+.top-main-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.top-main-section-image {
+  width: 48%;
+  margin-top: 1.5rem;
+}
+.top-main-section-image img {
+  width: 100%;
+}
+
+.top-main-section-texts {
+  width: 48%;
+}
+
+.top-main-section-texts a {
+  background-color: white;
+  color: black;
+  border: 0.1rem solid black;
+  padding: 0.3rem 1rem;
+  text-decoration: none;
+  border: 0.2rem solid black;
+}
+
+.top-main-section-texts a:hover {
+  background-color: rgb(0, 60, 255);
+  color: white;
+  border: none;
+}
+
+.bottom-main-section-banner {
+  background-color: rgb(0, 60, 255);
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  text-align: left;
+  margin: 4rem auto;
+  border: 0.5rem solid black;
+}
+
+.bottom-main-section-banner-image {
+  width: 50%;
+  height: auto;
+}
+
+.bottom-main-section-banner-image img {
+  width: 70%;
+  height: auto;
+  object-fit:cover;
+  border-radius: 35%;
+}
+
+.bottom-main-section-banner-text{
+  color:white;
+  width: 50%;
+}
+
+.contact-section-button-blue-background a{
+  background-color: white;
+  color: black;
+  border: 0.1rem solid black;
+  padding: 0.3rem 1rem;
+  text-decoration: none;
+}
+
+.contact-section-button-blue-background a:hover{
+  background-color: black;
+  color:white
+}
+.bottom-main-section {
+  margin-top: 1rem;
+  text-align: center;
+  width: 100%;
+}
+
+.bottom-main-section-first-row-projects {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.bottom-main-section-first-row-projects img {
+  max-width: 100%;
+  height: auto;
+}
+
+.bottom-main-section-second-row-projects {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.bottom-main-section-second-row-projects img {
+  width: 100%;
+}
+
+.bottom-main-part-project {
+  width: 23%;
+  height: auto;
+}
+
+.contact-section {
+  text-align: center;
+  background-color: black;
+  color: white;
+  height: 100px;
+  width: 100%;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.contact-section-text {
+  padding-bottom: 1rem;
+}
+
+.contact-section-button a {
+  background-color: white;
+  color: black;
+  border: 0.05rem solid rgb(0, 60, 255);  
+  padding: 0.3rem 1rem;
+  text-decoration: none;
+}
+
+.contact-section-button a:hover {
+  background-color: rgb(0, 60, 255);
+  color: white;
+}
+.footer-section {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.footer-section a img {
+  width: 2em;
+  margin: 1rem;
+}
+
+.color-text {
+  color: rgb(0, 60, 255);
+  font-weight: bold;
+  margin: 0.1rem;
+  padding: 0.05rem 0.2rem;
+}
